hphp/hack/test/typecheck/fc_enum_3.php.exp
ERROR: File "fc_enum_3.php", line 18, characters 9-16:
Invalid argument (Typing[4110])
  File "fc_enum_3.php", line 15, characters 16-18:
  Expected `int`
  File "fc_enum_3.php", line 5, characters 11-13:
  But got `arraykey`
  File "fc_enum_3.php", line 5, characters 6-8:
    by the definition of `Foo` arising from an implicit `as arraykey` constraint on this type
